--- a/clash-ghc/clash-ghc.cabal
+++ b/clash-ghc/clash-ghc.cabal
@@ -57,14 +57,14 @@ executable clash
   default-language:   Haskell2010
   Main-Is:            src-ghc/Batch.hs
   Build-Depends:      base, clash-ghc
-  GHC-Options:        -Wall -dynamic
+  GHC-Options:        -Wall
   default-language:   Haskell2010
 
 executable clashi
   default-language:   Haskell2010
   Main-Is:            src-ghc/Interactive.hs
   Build-Depends:      base, clash-ghc
-  GHC-Options:        -Wall -dynamic
+  GHC-Options:        -Wall
   default-language:   Haskell2010
 
 library
